--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,11 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    models:
+      achievement: 実績
+    attributes:
+      achievement:
+        title: タイトル
   date:
     abbr_day_names:
     - 日
