feat: 実績解除日を追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,6 +13,8 @@ ja:
       achievement:
         title: タイトル
         tag_list: タグ
+      bookmark:
+        unlock_date: 解除日
   date:
     abbr_day_names:
     - 日
